[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/wheel.gd" type="Script" id=1]
[ext_resource path="res://textures/wheel_defuse.png" type="Texture" id=2]
[ext_resource path="res://scripts/camera_controller.gd" type="Script" id=3]
[ext_resource path="res://scripts/world.gd" type="Script" id=4]
[ext_resource path="res://textures/albedo.png" type="Texture" id=5]
[ext_resource path="res://models/plane.obj" type="ArrayMesh" id=6]
[ext_resource path="res://models/pipes_end.obj" type="ArrayMesh" id=7]
[ext_resource path="res://materials/iron.tres" type="Material" id=8]
[ext_resource path="res://models/pipes_h.obj" type="ArrayMesh" id=9]
[ext_resource path="res://models/pipes_v.obj" type="ArrayMesh" id=10]
[ext_resource path="res://models/pipes_bends.obj" type="ArrayMesh" id=11]
[ext_resource path="res://models/wheel.obj" type="ArrayMesh" id=12]
[ext_resource path="res://models/roller.obj" type="ArrayMesh" id=13]
[ext_resource path="res://models/wire.obj" type="ArrayMesh" id=14]
[ext_resource path="res://scripts/maxwells_wheel.gd" type="Script" id=15]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.231373, 0.231373, 0.231373, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.34902, 0.156863, 0.156863, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 5 )
metallic = 0.25
metallic_specular = 0.9
roughness = 0.31

[sub_resource type="Environment" id=5]
background_mode = 1
background_color = Color( 0.85098, 0.85098, 0.85098, 1 )
ambient_light_color = Color( 0.929412, 0.929412, 0.929412, 1 )
ss_reflections_enabled = true
ssao_enabled = true

[node name="world" type="Spatial"]
script = ExtResource( 4 )

[node name="maxwells_wheel" type="Spatial" parent="."]
script = ExtResource( 15 )

[node name="pipes_end" type="MeshInstance" parent="maxwells_wheel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.06, 0 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 8 )

[node name="wire" type="MeshInstance" parent="maxwells_wheel"]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 1, 0 )
mesh = ExtResource( 14 )
material/0 = SubResource( 1 )

[node name="pipes_h" type="MeshInstance" parent="maxwells_wheel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = ExtResource( 9 )
material/0 = ExtResource( 8 )

[node name="pipes_v" type="MeshInstance" parent="maxwells_wheel"]
mesh = ExtResource( 10 )
material/0 = ExtResource( 8 )

[node name="pipes_bends" type="MeshInstance" parent="maxwells_wheel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = ExtResource( 11 )
material/0 = ExtResource( 8 )

[node name="wheel" type="KinematicBody" parent="maxwells_wheel"]
script = ExtResource( 1 )

[node name="cylinder" type="MeshInstance" parent="maxwells_wheel/wheel"]
transform = Transform( 0.25, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
mesh = ExtResource( 12 )
material/0 = SubResource( 2 )

[node name="roller" type="MeshInstance" parent="maxwells_wheel/wheel"]
mesh = ExtResource( 13 )
material/0 = SubResource( 3 )

[node name="camera_controller" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )
script = ExtResource( 3 )

[node name="camera" type="Camera" parent="camera_controller"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
keep_aspect = 0
current = true

[node name="plane" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.059453, 0 )
mesh = ExtResource( 6 )
material/0 = SubResource( 4 )

[node name="sun" type="DirectionalLight" parent="."]
transform = Transform( -0.713526, 0.700626, -0.00185188, 0.569487, 0.581507, 0.580977, 0.408125, 0.413487, -0.813918, 0, 0.983377, 0 )
light_color = Color( 0.968627, 0.968627, 0.92549, 1 )
shadow_color = Color( 0.0627451, 0.0588235, 0.0901961, 1 )
shadow_contact = 0.5

[node name="world_environment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )
[connection signal="values_ready" from="maxwells_wheel" to="." method="_on_maxwells_wheel_values_ready"]
